# wifi-shepard

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ui  PLAN.md  README.md  config.example.yaml  docker-compose.fragment.yml  docker-compose.yml  env.example  pyproject.toml  wifi-shepard-ui.env.example
.github/workflows/: ci.yml  cleanup-pr-image.yml  release.yml  test.yml
docs/: AUDIT-2026-07-14.md
docs/adr/: 0000-adr-index.md  0001-mvp-scope-base-feature.md  0002-device-history-and-status-ui.md  0003-kick-mechanism-upgrade.md  0004-kick-rate-limits.md  0005-device-identification-and-reboot-backend.md  0006-reboot-remediation.md  0007-action-policy-backoff-and-quiet-hours.md  0008-ap-saturation-gate.md  0009-disable-able-detection-criteria.md  0010-traffic-inactivity-detection.md  0011-dns-thrash-detection-pihole.md  0012-dns-observability-persistence.md  0013-settings-ui-write-paths.md  0014-per-device-settings-editing.md  0015-kick-rationale-explainability.md
src/wifi_shepard/: __main__.py  actor.py  backoff.py  config.py  db.py  db_mysql.py  dns_thrash.py  inactivity.py  main.py  migrate.py  pending.py  pipeline.py  rate_limit.py  resolution.py  scanner.py  scorer.py
src/wifi_shepard_ui/: app.py  config_io.py  db.py  device_config.py  settings_schema.py  views.py
tests/: conftest.py  test_actor_ac2.py  test_actor_ac3.py  test_actor_btm.py  test_allowlist_ac4.py  test_allowlist_case_insensitive.py  test_ap_saturation_gate.py  test_backoff_compose_ac8.py  test_backoff_db_derived_ac4_ac5.py  test_backoff_evaluate_ac1_ac2_ac3_ac4.py  test_btm_fallback_ac4.py  test_btm_pending_cleanup_on_success.py  test_config_controllers.py  test_config_env_interpolation.py  test_config_home_assistant.py  test_config_safety_rails_ac7.py  test_config_secret_redaction.py  test_config_validation.py  test_config_watch_ac6.py  test_controller_factory.py  test_daemon_config_controllers.py  test_daemon_multi_controller.py  test_daemon_notifier_wiring.py  test_daemon_scan_loop_resilience.py  test_db_ap_stats.py  test_db_index_and_retention.py  test_db_migration_kick_events_ac8.py  test_db_url.py  test_detection_disable_criteria_ac9.py  test_dns_config_ac1.py  test_dns_obs_ac1_migration.py  test_dns_obs_ac2_source_health.py  test_dns_obs_ac3_standings.py  test_dns_obs_ac4_kick_trigger.py  test_dns_obs_ac5_feature_off.py  test_dns_obs_ac6_failsoft.py  test_dns_secret_redaction_ac2.py  test_dns_sources_ac3.py  test_dns_sources_ac4.py  test_dns_thrash_ac10.py  (+59 more)
tests/fixtures/: unifi_clients.json  unifi_devices.json
tests/ui/: _device_data.py  _settings_data.py  conftest.py  test_ac_1_compose_and_dockerfile.py  test_ac_2_devices_list.py  test_ac_3_device_history.py  test_ac_4_overview.py  test_ac_5_readonly_connection.py  test_ac_6_no_write_routes.py  test_ac_7_bearer_token.py  test_ac_8_missing_db.py  test_adr_0014_per_device_settings.py  test_device_filters.py  test_devices_name.py  test_dns_near_threshold_freshness.py  test_dns_page_ac7.py  test_dns_page_ac8.py  test_history_summary.py  (+16 more)
tools/: probe_btm_capability.py
(+22 files in other folders)
