[project]
name = "wifi-shepard"
version = "0.0.1"
description = "Watches a wireless network and gently re-roams misbehaving 2.4 GHz clients."
requires-python = ">=3.12"
authors = [{ name = "Leonardo Merza" }]
dependencies = [
    "aiosqlite>=0.20",
    "aiounifi>=80",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "time-machine>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wifi_shepard"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["wifi_shepard", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = false
