[project]
name = "wifi-shepard"
version = "0.2.0"
description = "Watches a wireless network and gently re-roams misbehaving 2.4 GHz clients."
requires-python = ">=3.12"
authors = [{ name = "Leonardo Merza" }]
dependencies = [
    "aiohttp>=3.9",
    # Optional MySQL/MariaDB backend (WIFI_SHEPARD_DB_URL); SQLite stays the default.
    "aiomysql>=0.2",
    "aiosqlite>=0.20",
    "aiounifi==85",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    # Sync driver for the read-only MySQL/MariaDB adapter (WIFI_SHEPARD_DB_URL),
    # mirroring the sidecar's sqlite3 usage. (Also an aiomysql transitive dep.)
    "pymysql>=1.1",
    "uvicorn[standard]>=0.30",
    # ADR-0013: round-trip YAML writer for the settings UI — preserves operator
    # comments, key order, and ${VAR} secret placeholders when saving config.yaml.
    # The daemon still reads with pyyaml.safe_load (ruamel output is valid YAML).
    "ruamel.yaml>=0.18",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "time-machine>=2.14",
    # UI sidecar tests import fastapi.TestClient and Jinja2Templates. Keep these
    # in lockstep with [project.optional-dependencies].ui above. uvicorn is not
    # needed for tests (TestClient is an in-process httpx wrapper), but httpx
    # itself is — starlette declares it optional.
    "fastapi>=0.110",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pymysql>=1.1",
    "ruamel.yaml>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wifi_shepard", "src/wifi_shepard_ui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["wifi_shepard", "wifi_shepard_ui", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = false
